# Halo2-Playground

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  permutation_circuit.rs  sudoku_circuit.rs  truncated_factorial_circuit.rs
src/permutation_chip/: chip_setup_api.rs  gate_implementation.rs  mod.rs
src/sudoku_problem_chip/: chip_setup_api.rs  gate_implementation.rs  mod.rs
src/truncated_factorial_chip/: chip_setup_api.rs  gate_implementation.rs  mod.rs
src/utilities/: div_mod_counter.rs  field_counter.rs  iter_apply_macro.rs  mod.rs  permutations_iter.rs  proving_utilities.rs  region_sequence_assignment.rs  sequence_product_macro.rs  time_it_macro.rs
