[package]
name = "zk_halo2_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = "0.13.0"
halo2_proofs = { default-features = false, git = "https://github.com/zcash/halo2.git", rev = "7fd2ce259ec3d0b0e3ede3fa20e4cdcfc395efc9" }
try_collect = { git = "https://github.com/Gorzorg/try_collect.git" }
rand = "0.8.5"

[features]
default = ["halo2_proofs/batch"]
rayon = ["halo2_proofs/multicore"]